<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.vinga129.savolax.ui.address.AddressViewModel" />
        
        <variable
            name="fragment"
            type="com.vinga129.savolax.ui.address.AddressFragment" />

        <variable
            name="AddressTypes"
            type="String[]" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        tools:context=".ui.address.AddressFragment"
        tools:theme="@style/Theme.Shrine">

        <com.vinga129.savolax.custom.CustomTextInputLayout
            android:id="@+id/field_address_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:hint="@string/address_type"
            app:formRequired="true"
            app:jsonKey="address_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_home_work_24">

            <AutoCompleteTextView
                android:id="@+id/autocomplete_address_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                app:dropDownItems="@{AddressTypes}"
                tools:ignore="TextContrastCheck" />

        </com.vinga129.savolax.custom.CustomTextInputLayout>

        <com.vinga129.savolax.custom.CustomTextInputLayout
            android:id="@+id/field_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:hint="@string/street"
            app:formRequired="true"
            app:jsonKey="street"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_address_type"
            app:startIconDrawable="@drawable/ic_baseline_place_24"
            tools:ignore="ExtraText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="TextContrastCheck" />
        </com.vinga129.savolax.custom.CustomTextInputLayout>

        <com.vinga129.savolax.custom.CustomTextInputLayout
            android:id="@+id/field_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:hint="@string/city"
            app:formRequired="true"
            app:jsonKey="city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_street"
            app:startIconDrawable="@drawable/ic_baseline_location_city_24"
            tools:ignore="ExtraText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage|text"
                tools:ignore="TextContrastCheck" />
        </com.vinga129.savolax.custom.CustomTextInputLayout>

        <com.vinga129.savolax.custom.CustomTextInputLayout
            android:id="@+id/field_zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:hint="@string/zip_code"
            app:formRequired="true"
            app:jsonKey="zip_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_city"
            app:startIconDrawable="@drawable/ic_baseline_local_post_office_24"
            tools:ignore="ExtraText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:ignore="TextContrastCheck" />
        </com.vinga129.savolax.custom.CustomTextInputLayout>

        <com.vinga129.savolax.custom.CustomTextInputLayout
            android:id="@+id/field_other_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:hint="@string/other_info"
            app:jsonKey="other_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_zip_code"
            app:startIconDrawable="@drawable/ic_baseline_short_text_24"
            tools:ignore="ExtraText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                tools:ignore="TextContrastCheck" />
        </com.vinga129.savolax.custom.CustomTextInputLayout>

        <Button
            android:id="@+id/add_address"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:enabled="true"
            android:text="@string/add_address"
            android:onClick="@{() -> fragment.addAddress()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_other_info"
            app:layout_constraintVertical_bias="0.75" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="64dp"
            android:layout_marginTop="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>